# miel

./: .gitignore  README.md  ci.nix  default.nix  miel.cabal  shell.nix
.buildkite/: pipeline.yml
nix/: nixpkgs.nix
nix/haskell-packages/: miel.nix
src/: Main.hs  Options.hs
