cabal-version: 2.4

name:       miel
version:    0.0.0.0
author:     Evan Relf <evan@evanrelf.com>
maintainer: Evan Relf <evan@evanrelf.com>
homepage:   https://github.com/evanrelf/miel
license:    ISC
copyright:  2020 Evan Relf

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups

executable miel
  import: common
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    , optparse-applicative
    , selda
    , selda-sqlite
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
