cabal-version: 2.4

name:       miel
version:    0.0.0.0
author:     Evan Relf <evan@evanrelf.com>
maintainer: Evan Relf <evan@evanrelf.com>
homepage:   https://github.com/evanrelf/miel
license:    ISC
copyright:  2020 Evan Relf


common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


executable miel
  import: common, executable
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Options
  build-depends:
    , optparse-applicative
    , selda
    , selda-sqlite
