cabal-version: 2.2

name:       miel
version:    0.0.0.0
author:     Evan Relf <evan@evanrelf.com>
maintainer: Evan Relf <evan@evanrelf.com>
homepage:   https://github.com/evanrelf/miel
license:    ISC
copyright:  2020 Evan Relf

tested-with: GHC == 8.8.3


common common
  build-depends:
    , base   ^>= 4.13.0
    , relude ^>= 0.6.0
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints
    -foptimal-applicative-do
    -fshow-warning-groups


common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


executable miel
  import: common, executable
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Options
  build-depends:
    , aeson                       ^>= 1.4.7
    , aeson-pretty                ^>= 0.8.8
    , megaparsec                  ^>= 8.0.0
    , optparse-applicative        ^>= 0.15.1
    , prettyprinter               ^>= 1.6.1
    , prettyprinter-ansi-terminal ^>= 1.1.1
    , selda                       ^>= 0.5.1
    , selda-sqlite                ^>= 0.1.7
    , time                        ^>= 1.9.3
